--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
   <div class="overlay"></div>
 
   <div class="hero-content">
-    <img src="assets/logo-shell.png" alt="sync’d logo" class="logo" />
-
-    <h1>sync’d</h1>
-    <p class="tagline">…with your beauty</p>
+    <img src="logo1.png" alt="sync’d logo" class="logo" />
 
     <div class="cta">
       <a href="products.html?category=necklace" class="btn">NECKLACE</a>
