--- a/products.html
+++ b/products.html
@@ -1,40 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>sync’d | Products</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <title>Products</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-<header>
-  <img src="logo1.png" alt="sync’d logo" class="logo-header" />
-</header>
+  <h1 id="pageTitle" class="category-title"></h1>
 
-<main>
-  <h1 id="category-title"></h1>
-  <div class="product-grid" id="products"></div>
-</main>
+  <section class="products-grid" id="productsGrid">
+    <!-- Products injected by JS -->
+  </section>
 
-<script>
-  const urlParams = new URLSearchParams(window.location.search);
-  const category = urlParams.get('category');
-  const categoryTitle = category ? category.toUpperCase() : 'PRODUCTS';
-  document.getElementById('category-title').textContent = categoryTitle;
-
-  const productsContainer = document.getElementById('products');
-
-  for (let i = 1; i <= 10; i++) {
-    const div = document.createElement('div');
-    div.className = 'product';
-    div.innerHTML = `
-      <div class="product-image"></div>
-      <p class="product-name">${categoryTitle} ${i}</p>
-    `;
-    productsContainer.appendChild(div);
-  }
-</script>
-
+  <script src="products.js"></script>
 </body>
 </html>
