--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <img src="logo1.png" alt="sync’d logo" class="logo" />
 
     <div class="cta">
-      <a href="products.html?category=necklace" class="btn">NECKLACE</a>
-      <a href="products.html?category=earrings" class="btn">EAR RINGS</a>
-      <a href="products.html?category=bracelet" class="btn">BRACELET</a>
+      <a href="products.html?category=necklace">NECKLACE</a>
+      <a href="products.html?category=earrings">EAR RINGS</a>
+      <a href="products.html?category=bracelet">BRACELET</a>
+
     </div>
   </div>
 </section>
