--- a/index.html
+++ b/index.html
@@ -9,36 +9,19 @@
 </head>
 <body>
 
-<header class="site-header hero-header">
-  <div class="search-wrapper">
-    <input type="text" placeholder="SEARCH HERE . . ." />
-    <span class="search-icon">🔍</span>
-  </div>
+<section class="hero">
+  <div class="overlay"></div>
 
-  <div class="header-icons">
-    <a href="account.html" class="icon">👤<span>ACCOUNT</span></a>
-    <a href="cart.html" class="icon">🛒<span>CART</span></a>
-  </div>
-</header>
+  <div class="hero-content">
+    <img src="assets/logo-shell.png" alt="sync’d logo" class="logo" />
 
-<section class="hero-home">
-  <div class="hero-center">
-    <img src="assets/logo-shell.png" alt="sync’d shell logo" class="hero-shell">
+    <h1>sync’d</h1>
+    <p class="tagline">…with your beauty</p>
 
-    <h1 class="brand-name">sync’d</h1>
-    <p class="brand-tagline">…with your beauty</p>
-
-    <div class="hero-buttons">
-      <a href="products.html?category=necklace" class="outline-btn">NECKLACE</a>
-      <a href="products.html?category=earrings" class="outline-btn">EAR RINGS</a>
-      <a href="products.html?category=bracelet" class="outline-btn">BRACELET</a>
-    </div>
-  </div>
-</section>
-
-</body>
-
-
+    <div class="cta">
+      <a href="#" class="btn">NECKLACE</a>
+      <a href="#" class="btn">EAR RINGS</a>
+      <a href="#" class="btn">BRACELET</a>
     </div>
   </div>
 </section>
