--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <p class="tagline">…with your beauty</p>
 
     <div class="cta">
-      <a href="#" class="btn">NECKLACE</a>
-      <a href="#" class="btn">EAR RINGS</a>
-      <a href="#" class="btn">BRACELET</a>
-    </div>
+         <a href="necklace.html" class="btn">NECKLACE</a>
+         <a href="earrings.html" class="btn">EAR RINGS</a>
+         <a href="bracelet.html" class="btn">BRACELET</a>
+</div>
+
   </div>
 </section>
 
