--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <p class="tagline">…with your beauty</p>
 
     <div class="cta">
-         <a href="necklace.html" class="btn">NECKLACE</a>
-         <a href="earrings.html" class="btn">EAR RINGS</a>
-         <a href="bracelet.html" class="btn">BRACELET</a>
+  <a href="products.html?category=necklace" class="btn">NECKLACE</a>
+  <a href="products.html?category=earrings" class="btn">EAR RINGS</a>
+  <a href="products.html?category=bracelet" class="btn">BRACELET</a>
 </div>
 
   </div>
