--- a/products.html
+++ b/products.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Products</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <title>sync’d | Products</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <h1 id="category-title"></h1>
+  <div class="product-grid" id="products"></div>
 
-  <h1 id="pageTitle" class="category-title"></h1>
+  <script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const category = urlParams.get('category');
+    document.getElementById('category-title').textContent = category.toUpperCase();
 
-  <section class="products-grid" id="productsGrid">
-    <!-- Products injected by JS -->
-  </section>
+    const productsContainer = document.getElementById('products');
 
-  <script src="products.js"></script>
+    // Create 10 placeholder items dynamically
+    for (let i = 1; i <= 10; i++) {
+      const div = document.createElement('div');
+      div.className = 'product';
+      div.textContent = `${category} ${i}`;
+      productsContainer.appendChild(div);
+    }
+  </script>
 </body>
 </html>
