--- a/products.html
+++ b/products.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-  <img src="assets/logo-shell.png" alt="sync’d logo" class="logo-header" />
+  <img src="logo1.png" alt="sync’d logo" class="logo-header" />
 </header>
 
 <main>
