--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <div class="overlay"></div>
 
   <div class="hero-content">
-    <img src="assets/logo-shell.png" alt="sync’d logo" class="logo" />
+    <img src="logo1.png" alt="sync’d logo" class="logo" />
 
     <h1>sync’d</h1>
     <p class="tagline">…with your beauty</p>
