--- a/products.html
+++ b/products.html
@@ -38,3 +38,69 @@
 
 </body>
 </html>
+
+<div class="product-card">
+  <img src="assets/necklace1.jpg" alt="Necklace 1" />
+
+  <h4>Necklace 1</h4>
+  <p class="price">$120</p>
+
+  <!-- Quantity Controls -->
+  <div class="qty-control">
+    <button onclick="changeQty(this, -1)">−</button>
+    <span class="qty">1</span>
+    <button onclick="changeQty(this, 1)">+</button>
+  </div>
+
+  <!-- Add to Cart -->
+  <button
+    class="add-to-cart"
+    onclick="addToCart('Necklace 1', 120, this)"
+  >
+    Add to Cart
+  </button>
+</div>
+
+<div class="product-card">
+  <img src="assets/necklace1.jpg" alt="Necklace 1" />
+
+  <h4>earrings 1</h4>
+  <p class="price">$120</p>
+
+  <!-- Quantity Controls -->
+  <div class="qty-control">
+    <button onclick="changeQty(this, -1)">−</button>
+    <span class="qty">1</span>
+    <button onclick="changeQty(this, 1)">+</button>
+  </div>
+
+  <!-- Add to Cart -->
+  <button
+    class="add-to-cart"
+    onclick="addToCart('earrings 1', 120, this)"
+  >
+    Add to Cart
+  </button>
+</div>
+
+<div class="product-card">
+  <img src="assets/necklace1.jpg" alt="Necklace 1" />
+
+  <h4>bracelet 1</h4>
+  <p class="price">$120</p>
+
+  <!-- Quantity Controls -->
+  <div class="qty-control">
+    <button onclick="changeQty(this, -1)">−</button>
+    <span class="qty">1</span>
+    <button onclick="changeQty(this, 1)">+</button>
+  </div>
+
+  <!-- Add to Cart -->
+  <button
+    class="add-to-cart"
+    onclick="addToCart('bracelet 1', 120, this)"
+  >
+    Add to Cart
+  </button>
+</div>
