--- a/index.html
+++ b/index.html
@@ -162,3 +162,13 @@
     if (typeof renderCart === "function") renderCart();
   }
 </script>
+
+<section class="home-collections">
+  <h1>sync’d</h1>
+  <p class="tagline">…with your beauty</p>
+
+  <div class="collection-buttons">
+    <a href="premium.html" class="collection-btn">Premium Collection</a>
+    <a href="pearl.html" class="collection-btn">Pearl Collection</a>
+  </div>
+</section>
